force-app/main/default/objects/Financial_Advices__c/Financial_Advices__c.object-meta.xml
<CustomObject>
    <label>Financial Advice</label>
    <nameField>
        <label>Financial Advices Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Advices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>