force-app/main/default/objects/Financial_Advices__c/fields/Advice_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Advice_Date_Time__c</fullName>
    <label>Advice Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>