force-app/main/default/objects/Financial_Advices__c/fields/Advisor__c.field-meta.xml
<CustomField>
    <fullName>Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Financial_Advices</relationshipName>
    <type>Lookup</type>
</CustomField>