force-app/main/default/objects/Financial_Advices__c/fields/Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Portfolio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portfolio</label>
    <referenceTo>Portfolio__c</referenceTo>
    <relationshipLabel>Financial Advices</relationshipLabel>
    <relationshipName>Financial_Advices</relationshipName>
    <type>Lookup</type>
</CustomField>