force-app/main/default/objects/Financial_Advices__c/fields/Reccommendation__c.field-meta.xml
<CustomField>
    <fullName>Reccommendation__c</fullName>
    <label>Reccommendation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>