force-app/main/default/objects/Financial_Advices__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yet To Discuss</fullName>
            </value>
            <value>
                <fullName>Discussion Completed</fullName>
            </value>
            <value>
                <fullName>Discussion Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>